@@ -1,3 +1,9 @@
+2009-02-05  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirread.c: Fixed testing for failed result from
+	TIFFReadDirectoryFindFieldInfo().
+	http://bugzilla.maptools.org/show_bug.cgi?id=1992
+
 2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_predict.c: Add support for 32bit integer horz. predictors.
